--- a/app.json
+++ b/app.json
@@ -9,7 +9,7 @@
     "manager",
     "3"
   ],
-  "repository": "hhttps://github.com/jithinjoy080/CS_Lab",
+  "repository": "https://github.com/Muthalib1010/bot-for-movie-arcade",
   "env": {
     "ENV": {
       "description": "Setting this to ANYTHING will enable env variables",
